ajustes no mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          data-500p=""
          data-550p="transform:translate(0,-200%);"
             >
-        <section class="content">
+        <!--<section class="content">-->
             <div id="slide-1" class="hero slide ">
                 <div class="caption"
                      data-40p="opacity: 1; transform:translate(0px,0px);"
@@ -45,8 +45,8 @@
                     </article>
                 </div>
             </div>
-        </section>
-        <section class="content">
+        <!--</section>-->
+        <!--<section class="content">-->
             <div id="slide-2" class="about slide">
                 <div class="about__noivos noivo">
                     <h3>O noivo</h3>
@@ -107,8 +107,8 @@
                     <img src="images/heart.png">
                 </div>
             </div>
-        </section>
-        <section class="content">
+        <!--</section>-->
+        <!--<section class="content">-->
             <div id="slide-3" class="padrinhos slide">
                 <h3>Padrinhos</h3>
                 <div data-100p="opacity: 0; transform:translate(200%,0);"
@@ -258,8 +258,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="content">
+        <!--</section>-->
+        <!--<section class="content">-->
             <div id="slide-4" class="slide casamento__container">
                 <h3 class="casamento-title">O Casamento</h3>
                 <div class="presentes">
@@ -322,9 +322,9 @@
                 </div>
             </div>
 
-        </section>
-        <section class="mb-only">
-            <div id="slide-5" class="slide footer">
+        <!--</section>-->
+        <!--<section class="mb-only">-->
+            <div id="slide-5" class="slide footer mb-only">
                 <video autoplay poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid">
                     <source src="//demosthenes.info/assets/videos/polina.webm" type="video/webm">
                     <source src="//demosthenes.info/assets/videos/polina.mp4" type="video/mp4">
@@ -354,7 +354,7 @@
                     </div>
                 </div>
             </div>
-    </section>
+    <!--</section>-->
     <div id="helper">
         <div class="marker red"></div>
         <div class="marker green"></div>
@@ -365,7 +365,6 @@
     </div>
 </main>
 
-<div id="skrollr-body"></div>
 </body>
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="js/skrollr.js"></script>
@@ -390,5 +389,7 @@
     //    video.addEventListener('click',function(){
     //        video.play();
     //    },false);
+    //todo resolucao com pouca altura esta comendo o texto e as fotos
+    //testar no tablet tmb
 </script>
 </html>
