--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="author" href="https://plus.google.com/+HellisonOliveira/about"/>
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
     <meta charset="UTF-8">
-    <link href='http://fonts.googleapis.com/css?family=Petit+Formal+Script' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Petit+Formal+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" media="screen and (max-width : 320px) " href="css/styleSmall.css">
     <link rel="stylesheet" type="text/css" media="screen and (min-width : 800px) " href="css/styleBig.css">
