--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <title>Sejam bem vindos!</title>
 </head>
 <body>
-<header class="header">
-    <div class="header__inner">
-        <h1 class="header__title">
-            Nathália & Hellison
-        </h1>
-    </div>
-</header>
+<!--<header class="header">-->
+    <!--<div class="header__inner">-->
+        <!--<h1 class="header__title">-->
+            <!--Nathália & Hellison-->
+        <!--</h1>-->
+    <!--</div>-->
+<!--</header>-->
 <main id="slides-container">
     <div id="slides"
          data-0="transform:translate(0%,0%);"
