editado texto love

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                     <h3>Love!</h3>
 
                     <p>O casal fazia parte do mesmo círculo de amizades, porém não se conheciam. Até uma certa festa.
-                        Sinceramente não rolou interesse por parte de nenhum dos dois.
-                        Ambos estavam com olhos em outras pessoas, mas foi nessa festa que rolou uma foto e uma troca de
+                        Sinceramente não rolou interesse por parte de nenhum dos dois. Porém foi nessa festa que rolou uma foto e a troca de
                         contatos. Veio o show, o primeiro beijo, ficadas, separação, o reecontro e claro, o namoro.</p>
 
                     <p>8 Anos se passaram, muitas coisas aconteceram, o amadurecimento de dois jovens totalmente
