--- a/index.html
+++ b/index.html
@@ -333,10 +333,11 @@
                 </div>
                 <div id="contato" class="rodape">
                     <div>
+                        <p id="confirmacao">Confirme sua presença antes de 10/07</p>
                         <ul class="hi-icon-wrap hi-icon-effect-8">
-                            <li id="confirmacao">
+                            <li>
                                 <a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17"
-                                   class="ig-b- icons presenca hi-icon"></a><br><span class="confirme">Confirme</span>
+                                   class="ig-b- icons presenca hi-icon"></a><br>Confirme
                             </li>
                             <li><a href="mailto:hellison.oliveira@gmail.com" class="ig-b- icons inbox "></a>
                                 <br>Contato
