--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                             </li>
                         </ul>
                         <ul class="" style="width:100%;">
-                            <li>
+                            <li style="margin-bottom: 3%;">
                                 <p id="countdown"></p>
 
                                 <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"
@@ -379,6 +379,14 @@
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/skrollr.js"></script>
 <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-62782994-1', 'auto');
+    ga('send', 'pageview');
+
     (function (d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
