--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
     <link rel="stylesheet" type="text/css" media="screen and (max-width : 320px) " href="css/styleSmall.css">
     <link rel="stylesheet" type="text/css" media="screen and (min-width : 800px) " href="css/styleBig.css">
     <title>Sejam bem vindos!</title>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-62782994-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -270,7 +286,8 @@
                            class="lojas"></a>
                     </div>
                     <div class="presente tokstok">
-                        <a target="_blank" href="https://www.tokstok.com.br/lic/convidados/default.jsf?idLista=234859" class="lojas"></a>
+                        <a target="_blank" href="https://www.tokstok.com.br/lic/convidados/default.jsf?idLista=234859"
+                           class="lojas"></a>
                     </div>
                     <div class="presente mgluiza">
                         <!--<img src="images/mgluiza.jpg" alt="logo magazineluiza">-->
@@ -379,10 +396,17 @@
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/skrollr.js"></script>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-62782994-1', 'auto');
     ga('send', 'pageview');
