--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="pt-br">
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Website in honor of our wedding">
+    <meta charset="UTF-8">
     <link rel="author" href="https://plus.google.com/+HellisonOliveira/about"/>
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
-    <meta charset="UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Petit+Formal+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
