--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website in honor of our wedding">
+    <meta name="description" content="Website feito em homenagem ao nosso casamento. Contem informações como listas de presentes, quem são os padrinhos e local da festa. Um pouco da nossa história e de como ficaram noivos Nathália Isabel de Carvalho Macedo e Hellison Teodoro de Oliveira">
     <meta charset="UTF-8">
     <link rel="author" href="https://plus.google.com/+HellisonOliveira/about"/>
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" media="screen and (max-width : 320px) " href="css/styleSmall.css">
     <link rel="stylesheet" type="text/css" media="screen and (min-width : 800px) " href="css/styleBig.css">
-    <title>Sejam bem vindos!</title>
+    <title>Sejam bem vindos ao site do nosso casamento!</title>
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -395,6 +395,19 @@
 </body>
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/skrollr.js"></script>
+<script>
+    (function() {
+        var cx = '017459045744601249925:4lw1v5jbzzs';
+        var gcse = document.createElement('script');
+        gcse.type = 'text/javascript';
+        gcse.async = true;
+        gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//cse.google.com/cse.js?cx=' + cx;
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(gcse, s);
+    })();
+</script>
+<gcse:search></gcse:search>
 <script>
     (function (d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
