--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="padrinhos__album">
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/eliene.lemes.39/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/eliene.lemes.39/picture?type=large);">
                             </div>
                             <article class="description">
                                 <p>Carlison & Eliene</p>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/lucianaevinicius.godoi/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/lucianaevinicius.godoi/picture?type=large);">
                             </div>
                             <article class="description">
                                 <p>Luciana & Vinícius</p>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/alessandra.macedo.3114/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/alessandra.macedo.3114/picture?type=large);">
 
                             </div>
                             <article class="description">
@@ -161,7 +161,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/marcos.xavier.712/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/marcos.xavier.712/picture?type=large);">
                             </div>
                             <article class="description">
                                 <p>Marcos Xavier</p>
@@ -169,7 +169,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/isabela.carvalho.79/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/isabela.carvalho.79/picture?type=large);">
                             </div>
                             <article class="description">
                                 <p>Isabela Carvalho</p>
@@ -177,7 +177,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/israel.macedo.75/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/israel.macedo.75/picture?type=large);">
                             </div>
                             <article class="description">
                                 <p>Israel Macedo</p>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/oliveiraviinicius/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/oliveiraviinicius/picture?type=large);">
                             </div>
                             <article class="description">
                                 <p>Vinicius Oliveira</p>
@@ -193,7 +193,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/luciana.a.delima.9/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/luciana.a.delima.9/picture?type=large);">
                             </div>
                             <article class="description">
                                 <p>Luciana Lima</p>
@@ -201,7 +201,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/100006467019333/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/100006467019333/picture?type=large);">
 
                             </div>
                             <article class="description">
@@ -210,7 +210,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/patricia.lima.90/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/patricia.lima.90/picture?type=large);">
 
                             </div>
                             <article class="description">
@@ -219,7 +219,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/keyla.lopesdeoliveira/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/keyla.lopesdeoliveira/picture?type=large);">
 
                             </div>
                             <article class="description">
@@ -228,7 +228,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/ismaelmacedojr/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/ismaelmacedojr/picture?type=large);">
 
                             </div>
                             <article class="description">
@@ -237,7 +237,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/michelle.santana.5686/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/michelle.santana.5686/picture?type=large);">
 
                             </div>
                             <article class="description">
@@ -246,7 +246,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/hallam.godinho/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/hallam.godinho/picture?type=large);">
                             </div>
                             <article class="description">
                                 <p>Hallam Godinho</p>
@@ -254,7 +254,7 @@
                         </div>
                         <div class="padrinho">
                             <div class="padrinho_pic"
-                                 style="background-image: url(http://graph.facebook.com/angelica.carvalho.santanna/picture?type=large);">
+                                 style="background-image: url(https://graph.facebook.com/angelica.carvalho.santanna/picture?type=large);">
 
                             </div>
                             <article class="description">
