--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 <div id="facebook-jssdk"></div>
 
-<main id="slides-container">
+<main id="slides-container" class="full__height">
     <div id="slides"
          data-0="transform:translate(0%,0%);"
          data-150p="transform:translate(0%,-50%);"
@@ -42,8 +42,8 @@
          data-450p="transform:translate(0,-150%);"
          data-500p=""
          data-550p="transform:translate(0,-200%);"
-            >
-        <section>
+            class="full__height">
+        <section class="full__height">
             <div id="slide-1" class="hero slide ">
                 <div class="caption"
                      data-40p="opacity: 1; transform:translate(0px,0px);"
@@ -53,7 +53,7 @@
                     <article class="description">
                         <h2 class="getting__marriage">Nós vamos nos casar</h2>
 
-                        <p>25 de Julho de 2015, Bella Eventos. Goiânia, Goiás</p>
+                        <p id="countdown"></p>
                     </article>
                 </div>
             </div>
@@ -350,30 +350,30 @@
                 </div>
                 <div id="contato" class="rodape">
                     <div>
-                        <p id="confirmacao">Confirme sua presença antes de 10/07</p>
+                        <p id="confirmacao"  class="btn red"><span>Confirme sua presença antes de 10/07</span></p>
                         <ul class="hi-icon-wrap hi-icon-effect-8">
                             <li>
                                 <a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17"
-                                   class="ig-b- icons presenca hi-icon"></a><br>Confirme
+                                   class="ig-b- icons presenca hi-icon"></a><br><p class="btn red"><span><a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17">Confirme</a></span></p>
                             </li>
                             <li><a href="mailto:hellison.oliveira@gmail.com" class="ig-b- icons inbox "></a>
-                                <br>Contato
+                                <br><p class="btn red"><span><a href="mailto:hellison.oliveira@gmail.com">Contato</a></span></p>
                             </li>
                             <li><a href="http://instagram.com/hlteodoro?ref=badge" target="_blank"
                                    class="ig-b- ig-b-48"></a>
-                                <br>Hellison
+                                <br><p class="btn red"><span><a href="http://instagram.com/hlteodoro?ref=badge" target="_blank">Hellison</a></span></p>
                             </li>
                             <li><a href="http://instagram.com/nathaliamacedo__?ref=badge" target="_blank"
                                    class="ig-b- ig-b-48"></a>
-                                <br>Nathália
+                                <br><p class="btn red"><span><a href="http://instagram.com/nathaliamacedo__?ref=badge" target="_blank">Nathália</a></span></p>
                             </li>
                             <li><a href="https://goo.gl/maps/LzSBr" target="_blank" class="ig-b- icons maps"></a>
-                                <br>Localização
+                                <br><p class="btn red"><span><a href="https://goo.gl/maps/LzSBr" target="_blank" >Localização</a></span></p>
                             </li>
                         </ul>
                         <ul class="" style="width:100%;">
                             <li style="margin-bottom: 3%;">
-                                <p id="countdown"></p>
+
 
                                 <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"
                                      data-layout="button"></div>
@@ -425,7 +425,7 @@
                 return parseInt((t2 - t1) / (24 * 3600 * 1000));
             }
         };
-        $('#countdown').html("Faltam " + DateDiff.inDays(today, d) + " dias");
+        $('#countdown').html("25 de Julho de 2015, Bella Eventos. Goiânia, Goiás. <br>Faltam " + DateDiff.inDays(today, d) + " dias");
     });
 
     var cards = $(".padrinho");
