--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 </div>
                 <div id="contato" class="rodape">
                     <div>
-                        <p id="confirmacao"  class="btn red"><span>Confirme sua presença antes de 10/07</span></p>
+                        <p id="confirmacao"  class="btn red"><span><a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17">Confirme sua presença antes de 10/07</a></span></p>
                         <ul class="hi-icon-wrap hi-icon-effect-8">
                             <li>
                                 <a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17"
