americanas no lugar da magazine luiza

--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
                         <a target="_blank" href="https://www.tokstok.com.br/lic/convidados/default.jsf?idLista=234859"
                            class="lojas"></a>
                     </div>
-                    <div class="presente mgluiza">
+                    <div class="presente americanas">
                         <!--<img src="images/mgluiza.jpg" alt="logo magazineluiza">-->
-                        <a target="_blank" href="https://www.querodecasamento.com.br/lista-de-casamento/hellinenathy/"
+                        <a target="_blank" href="https://carrinho.americanas.com.br/lista-de-casamento/pages/GuestGiftListPage/bridalRegistryId/01-02-11867677/"
                            class="lojas"></a>
                     </div>
                 </div>
