--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             pista de dança.<br>
                             - Sucos.<br>
                             - Refrigerante normal e zero.<br>
-                            - Cerveja Skol</p>
+                            - Cerveja Skol e Antarctica</p>
                     </div>
                     <div>
                         <img src="images/80611-200.png" alt="jantar"/>
