--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                      data-anchor-target="#helper"
                         >
                     <article class="description">
-                        <h2 class="getting__marriage">Nós vamos nos casar</h2>
+                        <h2 class="getting__marriage">Enfim casados</h2>
 
                         <p id="countdown"></p>
                     </article>
@@ -88,7 +88,7 @@
                         Já merece um cargo de gerência
                     </p>
 
-                    <p>Romântica, gosta de Grey's Anatomye e Los Hermanos </p>
+                    <p>Romântica, gosta de Grey's Anatomy e Los Hermanos </p>
                 </div>
                 <div class="love">
                     <h3>Love!</h3>
@@ -350,12 +350,7 @@
                 </div>
                 <div id="contato" class="rodape">
                     <div>
-                        <p id="confirmacao"  class="btn red"><span><a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17">Confirme sua presença antes de 10/07</a></span></p>
                         <ul class="hi-icon-wrap hi-icon-effect-8">
-                            <li>
-                                <a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17"
-                                   class="ig-b- icons presenca hi-icon"></a><br><p class="btn red"><span><a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17">Confirme</a></span></p>
-                            </li>
                             <li><a href="mailto:hellison.oliveira@gmail.com" class="ig-b- icons inbox "></a>
                                 <br><p class="btn red"><span><a href="mailto:hellison.oliveira@gmail.com">Contato</a></span></p>
                             </li>
@@ -422,10 +417,10 @@
                 var t2 = d2.getTime();
                 var t1 = d1.getTime();
 
-                return parseInt((t2 - t1) / (24 * 3600 * 1000));
+                return parseInt((t1 - t2) / (24 * 3600 * 1000));
             }
         };
-        $('#countdown').html("25 de Julho de 2015, Bella Eventos. Goiânia, Goiás. <br>Faltam " + DateDiff.inDays(today, d) + " dias");
+        $('#countdown').html("25 de Julho de 2015, Bella Eventos. Goiânia, Goiás. <br>Há " + DateDiff.inDays(today, d) + " dias");
     });
 
     var cards = $(".padrinho");
